welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: not found: value d
var sumC= c+d
            ^blueTicket:7: error: value || is not a member of Int
if (sumA=10 || sumB=10 || sumC=10) return 10;  
            ^blueTicket:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (sumA=10 || sumB=10 || sumC=10) return 10;  
        ^blueTicket:8: error: value || is not a member of Int
if (sumA=sumB+10 ||sumA=sumC+10) return 5;
                 ^blueTicket:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (sumA=sumB+10 ||sumA=sumC+10) return 5;
        ^